--- a/infrastructure/persistance/build.gradle
+++ b/infrastructure/persistance/build.gradle
@@ -10,15 +10,14 @@ repositories {
 }
 
 dependencies {
+    implementation project(path: ':domain')
+    implementation project(path: ':application')
     testImplementation(platform("org.junit:junit-bom:5.9.1"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     implementation('org.springframework.data:spring-data-jpa:3.2.3')
     implementation ('org.springframework.data:spring-data-commons:3.2.3')
     implementation ('org.springframework:spring-context:6.1.4')
     implementation ('org.springframework:spring-orm:6.1.4')
-    project(":domain")
-    project(":application")
-
 }
 
 tasks.test {
